Workaround for containerd bug https://github.com/containerd/containerd/issues/8973

--- a/igz_files/igz_inventory.ini.j2
+++ b/igz_files/igz_inventory.ini.j2
@@ -4,10 +4,8 @@
 k8s-node{{ loop.index }} ansible_host={{ node.mgmt_ip_address }} ansible_user={{ username }} ansible_ssh_pass="{{ password }}" ansible_become_password="{{ password }}" ip={{ node.client_ip_address }}{% if loop.index <= 3 %} etcd_member_name=etcd{{ loop.index }}{% endif %}{{''}}
 {% endfor %}
 
-{% if distro == 'rocky' %}
 [all:vars]
-ansible_python_interpreter=/usr/bin/python3.6
-{% endif %}
+iguazio_version = {{ iguazio_version }}
 
 [kube_control_plane]
 {% if app_nodes|length < 3 %}
