--- a/igz_files/igz_override.yml.j2
+++ b/igz_files/igz_override.yml.j2
@@ -53,6 +53,7 @@ kubectl_localhost: yes
 preinstall_selinux_state: disabled
 kube_proxy_mode: iptables
 kube_network_plugin: calico
+calico_node_memory_limit: 1Gi
 resolvconf_mode: docker_dns
 containerd_use_config_path: true
 unsafe_show_logs: true
