--- a/igz_files/igz_override.yml.j2
+++ b/igz_files/igz_override.yml.j2
@@ -1,5 +1,5 @@
 # Your dream is to override only this when bumping k8s for on-prem deployment
-#kube_version: v1.31.4
+kube_version: "1.32.8"
 
 # These are filled by the igz_inventory_builder.py script
 registry_host: "{{ igz_registry_host }}:{{ igz_registry_port }}"
