--- a/igz_files/igz_override.yml.j2
+++ b/igz_files/igz_override.yml.j2
@@ -88,3 +88,6 @@ kubelet_config_extra_args:
 kubeadm_ignore_preflight_errors:
   - SystemVerification
 
+# Containerd version compatible with Rocky 8 (GLIBC 2.28)
+containerd_version: "2.0.5"
+
